--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,6 +22,7 @@
     "framer-motion": "^10.12.18",
     "globby": "^13.2.2",
     "next": "13.4.8",
+    "next-sitemap": "^4.1.8",
     "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
