--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formspree/react": "^2.4.4",
     "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
