--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@types/react-dom": "18.2.6",
     "@vercel/analytics": "^1.0.1",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
+    "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.12.18",
     "globby": "^13.2.2",
-    "next": "13.4.8",
+    "next": "^13.5.6",
     "next-sitemap": "^4.1.8",
     "popmotion": "^11.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
