--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.32.6",
     "typescript": "5.1.6"
   },
   "devDependencies": {
