--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -22,7 +23,9 @@
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.12.18",
     "globby": "^13.2.2",
+    "gray-matter": "^4.0.3",
     "next": "^13.5.6",
+    "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^4.1.8",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
